# Check_pytest

./: .coverage  README.md  pyproject.toml
src/: main.py  reverse.py
tests/: tesr_reverse.py  test_main.py  test_reverse.py
