[project]
name = "check-pytest"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Pogoreltcev",email = "romzes26@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
pytest-cov = "^6.1.1"

